--- a/packages/frontend/index.html
+++ b/packages/frontend/index.html
@@ -1,7 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Professional Software Development Service"
+    />
+    <meta name="keywords" content="Software Engineer" />
+    <meta name="author" content="Alex Ventura" />
+    <meta name="title" property="og:title" content="Alex Ventura" />
+    <meta
+      name="description"
+      property="og:description"
+      content="Software Engineer"
+    />
     <link rel="icon" type="image/svg+xml" href="/notebook.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alex Ventura</title>
